# medflow-healthcare-platform

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  EXPLAINER-standalone.html  EXPLAINER.html  LICENSE  Makefile  README.md  commitlint.config.cjs  docker-compose.dev.yml  docker-compose.yml  index.html  package.json  skills-lock.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg  pre-commit
apps/api-gateway/: .env.example  .eslintrc.cjs  Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
apps/audit-service/: .env.example  .eslintrc.cjs  Dockerfile  README.md  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
apps/cds-hooks-service/: .env.example  .eslintrc.cjs  Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
apps/clinician-dashboard/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/deid-service/: .env.example  Dockerfile  README.md  pyproject.toml
apps/deid-service/src/medflow_deid/: __init__.py  api.py  audit.py  config.py  logging.py  main.py  metrics.py
apps/deid-service/src/medflow_deid/engine/: __init__.py  analyzer.py  date_shift.py  fhir_walker.py  zip3.py
apps/deid-service/tests/: conftest.py  test_analyzer.py  test_api.py  test_date_shift.py  test_fhir_walker.py  test_logging_phi.py  test_zip3.py
apps/dicom-receiver/: .env.example  Dockerfile  README.md  pyproject.toml
apps/dicom-receiver/src/medflow_dicom/: __init__.py  app.py  config.py  logging.py  main.py  metadata.py  metrics.py  telemetry.py
apps/dicom-receiver/src/medflow_dicom/events/: __init__.py  producer.py
apps/dicom-receiver/src/medflow_dicom/fhir/: __init__.py  imaging_study.py
apps/dicom-receiver/src/medflow_dicom/pipeline/: __init__.py  manifest.py  preprocess.py
apps/dicom-receiver/src/medflow_dicom/scp/: __init__.py  handlers.py  server.py
apps/dicom-receiver/src/medflow_dicom/storage/: __init__.py  minio_client.py  paths.py
apps/dicom-receiver/tests/: conftest.py  test_handlers.py  test_imaging_study.py  test_logging_phi.py  test_manifest.py  test_metadata.py  test_paths.py  test_preprocess.py
apps/fhir-server/: .env.example  Dockerfile  README.md  checkstyle.xml  pom.xml
apps/hl7v2-ingester/: .env.example  Dockerfile  README.md  pom.xml
apps/ml-batch/: .env.example  Dockerfile  README.md  pyproject.toml
apps/ml-batch/src/medflow_ml/: __init__.py  config.py  logging_utils.py
apps/ml-batch/src/medflow_ml/data_io/: __init__.py  delta_io.py  spark_io.py
apps/ml-batch/src/medflow_ml/evaluation/: __init__.py  metrics.py
apps/ml-batch/src/medflow_ml/features/: __init__.py  encounters.py  labs.py  vitals.py
apps/ml-batch/src/medflow_ml/jobs/: __init__.py  backfill_features.py  build_cohorts.py  drift_report.py  train_readmission.py  train_sepsis.py  train_xray.py
apps/ml-batch/src/medflow_ml/models/: __init__.py  lstm.py
apps/ml-batch/tests/: conftest.py  test_age_bands.py  test_evaluation.py  test_features_vitals.py  test_leakage_guard.py  test_windowing.py
apps/ml-serving/: .env.example  Dockerfile  README.md  bentofile.yaml  pyproject.toml  service.py
apps/ml-serving/src/medflow_serving/: __init__.py  config.py  logging_utils.py  main.py
apps/ml-serving/src/medflow_serving/api/: routes.py  schemas.py
apps/ml-serving/src/medflow_serving/explain/: __init__.py  shap_utils.py
apps/ml-serving/src/medflow_serving/fallback/: cold_start.py
apps/ml-serving/src/medflow_serving/inference/: featurize.py  gradcam.py  nlp.py  readmission.py  sepsis.py  xray.py
apps/ml-serving/src/medflow_serving/persistence/: hashing.py  models.py  repository.py
apps/ml-serving/src/medflow_serving/registry/: __init__.py  canary.py  loader.py
apps/ml-serving/tests/: test_canary.py  test_cold_start.py  test_featurize.py  test_gradcam.py  test_hashing.py
apps/patient-mobile/: .env.example  .eslintrc.cjs  .gitignore  app.config.ts  eas.json  expo-env.d.ts  jest.config.js  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/patient-portal/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/realtime-gateway/: .env.example  .eslintrc.cjs  Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
apps/wearables-ingester/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/wearables-ingester/alembic/: env.py  script.py.mako
apps/wearables-ingester/alembic/versions/: 0001_create_vitals.py
apps/wearables-ingester/src/medflow_wearables/: __init__.py  api.py  config.py  db.py  kafka_producer.py  logging.py  main.py  metrics.py  mqtt.py  schemas.py  telemetry.py
apps/wearables-ingester/tests/: conftest.py  test_api.py  test_dedup.py  test_mqtt.py  test_schemas.py
compliance/: threat-model.md
compliance/access-policies/: README.md  k8s-rbac.yaml  vault-policy-deid.hcl  vault-policy-gateway.hcl
compliance/audit-queries/: README.md  after-hours-access.sql  break-glass-review.sql  bulk-read-anomaly.sql  chain-verification.sql  deid-activity.sql  who-accessed-patient.sql
compliance/deid-rules/: README.md  safe-harbor-checklist.md
data/dbt/: README.md  dbt_project.yml  packages.yml  profiles.yml.example
data/flink/: README.md  config.py  requirements.txt  sepsis_alerting.py  sepsis_logic.py
data/great_expectations/: great_expectations.yml
data/lineage/: README.md  seed_lineage.py
docs/: architecture.md  compliance.md  data-lake.md  deployment.md  interop.md  ml.md
docs/adr/: 0001-lakehouse-on-delta.md  0002-omop-as-gold.md  0003-vault-envelope-encryption.md  0004-streaming-vs-batch-for-sepsis.md  0005-smart-on-fhir-vs-custom-oauth.md
scripts/: README.md  audit_query.sh  capture_screens.mjs  compliance_report.sh  download_chestxray.sh  sbom.sh  scan.sh  seed_patients.sh  submit_flink_job.sh  test_python.sh
(+476 files in other folders)
