[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "medflow-dicom-receiver"
version = "0.1.0"
description = "MedFlow DICOM C-STORE/C-ECHO receiver: MinIO persistence, FHIR ImagingStudy, Kafka events, ML preprocessing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynetdicom==3.0.4",
    "pydicom==3.0.2",
    "numpy==2.4.6",
    "pillow==12.2.0",
    "minio==7.2.20",
    "confluent-kafka==2.14.2",
    "pyarrow==24.0.0",
    "httpx==0.28.1",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "structlog==26.1.0",
    "prometheus-client==0.25.0",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
    "opentelemetry-instrumentation-fastapi==0.63b1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.17",
    "black==26.5.1",
    "mypy==2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medflow_dicom"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RET", "PL"]
ignore = ["PLR0913"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["medflow_dicom"]

[[tool.mypy.overrides]]
module = [
    "pynetdicom.*",
    "pydicom.*",
    "confluent_kafka.*",
    "minio.*",
    "pyarrow.*",
    "PIL.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
