[build-system]
requires = ["hatchling==1.24.2"]
build-backend = "hatchling.build"

[project]
name = "medflow-ml"
version = "0.1.0"
description = "MedFlow batch ML: training, feature backfill, cohorts, drift (synthetic data only - no PHI)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "structlog==24.2.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "deltalake==0.17.4",
    "s3fs==2024.6.0",
    "boto3==1.34.122",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "pytorch-lightning==2.2.5",
    "torchmetrics==1.4.0",
    "xgboost==2.0.3",
    "scikit-learn==1.5.0",
    "shap==0.45.1",
    "matplotlib==3.9.0",
    "pillow==10.3.0",
    "mlflow==2.14.1",
    "evidently==0.4.25",
    "feast==0.39.1",
    "sqlalchemy==2.0.31",
    "psycopg2-binary==2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "ruff==0.4.10",
    "black==24.4.2",
    "mypy==1.10.0",
    "pandas-stubs==2.2.2.240603",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medflow_ml"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S", "PT"]
ignore = ["S101"]  # assert is fine in tests; S603/S607 reviewed at call sites

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
