[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "medflow-ml"
version = "0.1.0"
description = "MedFlow batch ML: training, feature backfill, cohorts, drift (synthetic data only - no PHI)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "structlog==26.1.0",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "pyspark==4.1.2",
    "delta-spark==4.2.0",
    "deltalake==1.6.0",
    "s3fs==2026.4.0",
    "boto3==1.43.29",
    "torch==2.12.0",
    "torchvision==0.27.0",
    "pytorch-lightning==2.6.5",
    "torchmetrics==1.9.0",
    "xgboost==3.2.0",
    "scikit-learn==1.9.0",
    "shap==0.51.0",
    "matplotlib==3.11.0",
    "pillow==12.2.0",
    "mlflow==3.13.0",
    "evidently==0.7.21",
    "feast==0.63.0",
    "sqlalchemy==2.0.50",
    "psycopg2-binary==2.9.12",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.17",
    "black==26.5.1",
    "mypy==2.1.0",
    "pandas-stubs==3.0.3.260530",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medflow_ml"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S", "PT"]
ignore = ["S101"]  # assert is fine in tests; S603/S607 reviewed at call sites

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
