[build-system]
requires = ["hatchling==1.24.2"]
build-backend = "hatchling.build"

[project]
name = "medflow-serving"
version = "0.1.0"
description = "MedFlow multi-model clinical ML serving layer (synthetic data only - no PHI)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "structlog==24.2.0",
    "sqlalchemy[asyncio]==2.0.31",
    "asyncpg==0.29.0",
    "aiokafka==0.10.0",
    "redis==5.0.6",
    "mlflow==2.14.1",
    "boto3==1.34.122",
    "numpy==1.26.4",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "xgboost==2.0.3",
    "shap==0.45.1",
    "feast==0.39.1",
    "medspacy==1.1.6",
    "spacy==3.7.5",
    "pydicom==2.4.4",
    "pillow==10.3.0",
    "python-multipart==0.0.9",
    "bentoml==1.2.18",
    "opentelemetry-instrumentation-fastapi==0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "ruff==0.4.10",
    "black==24.4.2",
    "mypy==1.10.0",
    "types-redis==4.6.0.20240425",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medflow_serving"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S", "PT"]
ignore = ["S101"]  # assert is fine in tests; S101 is re-enabled for src via per-file-ignores

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
