[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "medflow-serving"
version = "0.1.0"
description = "MedFlow multi-model clinical ML serving layer (synthetic data only - no PHI)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "structlog==26.1.0",
    "sqlalchemy[asyncio]==2.0.50",
    "asyncpg==0.31.0",
    "aiokafka==0.14.0",
    "redis==8.0.0",
    "mlflow==3.13.0",
    "boto3==1.43.29",
    "numpy==2.4.6",
    "torch==2.12.0",
    "torchvision==0.27.0",
    "xgboost==3.2.0",
    "shap==0.51.0",
    "feast==0.63.0",
    "medspacy==1.3.1",
    "spacy==3.8.14",
    "pydicom==3.0.2",
    "pillow==12.2.0",
    "python-multipart==0.0.32",
    "bentoml==1.4.39",
    "opentelemetry-instrumentation-fastapi==0.63b1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
    "ruff==0.15.17",
    "black==26.5.1",
    "mypy==2.1.0",
    "types-redis==4.6.0.20241004",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medflow_serving"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S", "PT"]
ignore = ["S101"]  # assert is fine in tests; S101 is re-enabled for src via per-file-ignores

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
