[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "medflow-wearables-ingester"
version = "0.1.0"
description = "MedFlow wearables vitals ingester: MQTT + HTTP intake, Postgres persistence, Kafka fan-out."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "aiomqtt==2.5.1",
    "sqlalchemy[asyncio]==2.0.50",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "confluent-kafka==2.14.2",
    "structlog==26.1.0",
    "prometheus-client==0.25.0",
    "httpx==0.28.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
    "opentelemetry-instrumentation-fastapi==0.63b1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.17",
    "black==26.5.1",
    "mypy==2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medflow_wearables"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RET", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["medflow_wearables"]

[[tool.mypy.overrides]]
module = ["confluent_kafka.*", "aiomqtt.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
